welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: value unary_! is not a member of Unit
  while ( !testFinal() ){
          ^SnakeBuggle:15: warning: enclosing method testFinal has result type Unit: return value discarded
     return estFaceMur();
     ^SnakeBuggle:18: warning: enclosing method testFinal has result type Unit: return value discarded
     return estFaceMur();
     ^SnakeBuggle:21: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
   return false;
          ^SnakeBuggle:21: warning: enclosing method testFinal has result type Unit: return value discarded
   return false;
   ^SnakeBuggle:26: error: value Ouest is not a member of object plm.universe.Direction
  if ( getDirection() == Direction.Ouest ){
                                   ^